# simplify_urdf_collision

./: .gitignore  CMakeLists.txt  README.md  get_cgal.sh  package.xml  setup.py
include/: boundingbox_pywrapper.h
src/: boundingbox_pywrapper.cpp  optimal_bounding_box.cpp
src/simplify_urdf_collision/: __init__.py  color.py  py_boundingbox_wrapper.py  simplify.py  urdf_handler.py
test/: test.urdf  test_boxed.urdf  test_urdf.launch  wolfgang_boxed.urdf
